<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:background="@color/colorActivityBackground"
    tools:context=".LATESegnalFinderSpeedTest_DataRecordActivity">

    <TextView
        android:id="@+id/activity_record_signal_strength_label_ui"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/activity_record_signal_strength_label_text"
        android:textColor="@color/textcolor1"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/activity_record_pause_resume_button_ui"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="48dp"
        android:background="@drawable/bg_circle"
        android:drawableLeft="@drawable/ic_pause"
        android:drawablePadding="5dp"
        android:textColor="@color/textcolorGreen"
        android:text="@string/activity_record_pause_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/activity_record_stop_button_ui"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="48dp" />

    <Button
        android:id="@+id/activity_record_stop_button_ui"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/bg_circle"
        android:drawableLeft="@drawable/ic_stop"
        android:drawablePadding="5dp"
        android:textColor="@color/textcolorRed"
        android:text="@string/activity_record_stop_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/activity_record_pause_resume_button_ui"
        android:layout_marginRight="48dp" />

    <ImageView
        android:id="@+id/activity_record_record_image_ui"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_recording"
        />

    <TextView
        android:id="@+id/activity_record_record_image_label_ui"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/activity_record_record_image_label_text"
        android:textColor="@color/textcolorRed"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        app:layout_constraintBottom_toBottomOf="@+id/activity_record_record_image_ui"
        app:layout_constraintEnd_toStartOf="@+id/activity_record_record_image_ui"
        app:layout_constraintTop_toTopOf="@+id/activity_record_record_image_ui"/>

    <TextView
        android:id="@+id/activity_record_signal_strength_text_ui"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/activity_record_signal_strength_no_signal"
        android:textColor="@color/textcolor1"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_record_signal_strength_label_ui"
        android:layout_marginLeft="24dp" />

    <TextView
        android:id="@+id/activity_record_lte_rsrp_text_ui"
        android:layout_width="0dp"

        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:gravity="right"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/textcolor1"
        app:layout_constraintEnd_toStartOf="@+id/activity_record_lte_rsrp_label_ui"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_record_signal_strength_text_ui"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="16dp" />
        <TextView
        android:id="@+id/activity_record_lte_rsrp_label_ui"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/activity_record_lte_rsrp_label_text"
        android:textColor="@color/textcolorGreen"
        android:hint="#f4ff48"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="@+id/activity_record_lte_rsrp_text_ui"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/activity_record_lte_rsrp_text_ui"
        app:layout_constraintTop_toTopOf="@+id/activity_record_lte_rsrp_text_ui"
        android:layout_marginRight="16dp" />

    <TextView
        android:id="@+id/activity_record_lte_rsrq_text_ui"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="right"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/textcolor1"
        app:layout_constraintEnd_toStartOf="@+id/activity_record_lte_rsrq_label_ui"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_record_lte_rsrp_text_ui"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/activity_record_lte_rsrq_label_ui"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:textColor="@color/textcolorGreen"
        android:text="@string/activity_record_lte_rsrq_label_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="@+id/activity_record_lte_rsrq_text_ui"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/activity_record_lte_rsrq_text_ui"
        app:layout_constraintTop_toTopOf="@+id/activity_record_lte_rsrq_text_ui"
        android:layout_marginRight="16dp" />

    <TextView
        android:id="@+id/activity_record_lte_pci_text_ui"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="right"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/textcolor1"
        app:layout_constraintEnd_toStartOf="@+id/activity_record_lte_pci_label_ui"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_record_lte_rsrq_text_ui"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/activity_record_lte_pci_label_ui"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:textColor="@color/textcolorGreen"
        android:text="@string/activity_record_lte_pci_label_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="@+id/activity_record_lte_pci_text_ui"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/activity_record_lte_pci_text_ui"
        app:layout_constraintTop_toTopOf="@+id/activity_record_lte_pci_text_ui"
        android:layout_marginRight="16dp" />

    <TextView
        android:id="@+id/activity_record_data_points_text_ui"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="right"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/textcolor1"
        app:layout_constraintEnd_toStartOf="@+id/activity_record_data_points_label_ui"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_record_lte_pci_text_ui"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/activity_record_data_points_label_ui"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/activity_record_data_points_label_text"
        android:textColor="@color/textcolorGreen"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="@+id/activity_record_data_points_text_ui"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/activity_record_data_points_text_ui"
        app:layout_constraintTop_toTopOf="@+id/activity_record_data_points_text_ui"
        android:layout_marginRight="16dp" />

    <TextView
        android:id="@+id/activity_record_offset_text_ui"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="right"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/textcolor1"
        app:layout_constraintEnd_toStartOf="@+id/activity_record_offset_label_ui"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_record_data_points_text_ui"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/activity_record_offset_label_ui"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/activity_record_offset_label_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="@+id/activity_record_offset_text_ui"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:textColor="@color/textcolorGreen"
        app:layout_constraintStart_toEndOf="@+id/activity_record_offset_text_ui"
        app:layout_constraintTop_toTopOf="@+id/activity_record_offset_text_ui"
        android:layout_marginRight="16dp" />

    <Button
        android:id="@+id/button2"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_circle"
        android:text="@string/activity_record_uncertainty_statement_text"
        android:textColor="@color/textcolor1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_record_offset_label_ui"/>

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        ads:adSize="LARGE_BANNER"
        ads:adUnitId="@string/AdMob_BannerAd_ID" />

</androidx.constraintlayout.widget.ConstraintLayout>